rework footer layout

--- a/css/main.css
+++ b/css/main.css
@@ -1125,13 +1125,17 @@ a {
   height: 35px;
   line-height: 35px; }
   .location-caption p {
-    font-family: proxima_medium, sans-serif;
-    font-size: 10px;
+    font-family: proxima_thin, sans-serif;
+    font-size: 8px;
     text-transform: uppercase;
-    letter-spacing: 3px;
+    letter-spacing: 2.5px;
     color: rgba(233, 68, 68, 0.75); }
+    .location-caption p span {
+      font-family: proxima_medium, sans-serif;
+      font-size: 10px; }
 
 @media (max-width: 565px) {
+  .location-caption,
   .social-main {
     visibility: hidden; } }
 
