--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -34,7 +34,20 @@
 			visibility: hidden;
 		}
 
+	.landing-header {
+		h1 {
+			text-transform: initial;
+			font-family: $black;
+			margin-bottom: 0.25em;
+			font-size: 3em;
+
+		}
+		h3 {
+			font-family: $body;
+			color: $salmon;
+		}
 	}
+}
 
 /* Larger than mobile */
 @media (min-width: 400px) {
