fix fish symbol for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1088,11 +1088,7 @@ a {
     list-style-type: none;
     font-size: 14px;
     float: left;
-<<<<<<< HEAD
-    border: 1px solid rgba(233, 68, 68, 0.1); }
-=======
     border: 1px solid rgba(233, 68, 68, 0.15); }
->>>>>>> 6921d49c08e75dbc2baf9d4cc3f05042f1bbe3d1
     .social-main li i {
       height: 35px;
       width: 35px;
@@ -1278,11 +1274,20 @@ hr {
   text-transform: initial;
   font-family: proxima_black, sans-serif;
   margin-bottom: 0.25em;
-  font-size: 3em; }
+  font-size: 3em;
+  line-height: 1em; }
 
 .main-landing-page .landing-header h3 {
   font-family: proxima_light, sans-serif;
   color: #E94444; }
+
+.main-landing-page #salmon-fish {
+  position: relative; }
+  .main-landing-page #salmon-fish #salmon-fin {
+    position: absolute;
+    width: 11px;
+    left: 176px;
+    top: 44px; }
 
 /* Larger than mobile */
 @media (min-width: 400px) {
