--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -150,8 +150,7 @@
 }
 
 .prototype-container {
-	// background: $salmon;
-	background: #0176ea;
+	background: $salmon;
 	h3,
 	p {
 		color: $reverse;
@@ -221,7 +220,7 @@
 	.about-footer-text {
 		h2 {
 			font-size: 2.5em;
-			color: #0176e8;
+			color: $salmon;
 		}
 	}
 }
