--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -22,6 +22,7 @@
 @import "pages/prototype";
 @import "pages/ui";
 @import "pages/resume";
+@import "pages/contact";
 
 
 // Additional styles to think about
