--- a/css/sass/pages/_about.scss
+++ b/css/sass/pages/_about.scss
@@ -24,7 +24,7 @@
 	h1 {
 		// text-transform: uppercase;
 		font-size: 1.5em;
-		font-family: $bold_avant;
+		font-family: $black;
 		line-height: 1em;
 	}
 
