change button style

--- a/css/sass/components/_buttons.scss
+++ b/css/sass/components/_buttons.scss
@@ -4,7 +4,7 @@
 
 // Default button
 .btn {
-  border-radius: $btn-br;
+  // border-radius: $btn-br;
   // border-radius: 50%;
   background: transparent;
   border: 1px solid $reverse;
