--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -21,6 +21,7 @@
 @import "pages/about";
 @import "pages/prototype";
 @import "pages/ui";
+@import "pages/graphic_design";
 @import "pages/resume";
 @import "pages/contact";
 
