--- a/css/sass/pages/_prototype.scss
+++ b/css/sass/pages/_prototype.scss
@@ -125,7 +125,7 @@
  */
 
 .introduction {
-		background: #e4ecf1;
+		background: $grey;
 	.introduction-text {
 		a {
 			color: $primary-font-color;
