--- a/css/sass/base/_flex.scss
+++ b/css/sass/base/_flex.scss
@@ -25,22 +25,25 @@ img {
 .fullpage-section {
 	width: 100%;
 	height: 100vh;
+	display: -ms-flexbox;
 	display: flex;
 }
 
 
 /**
- * NEW FLEX STUFF
+ * FLEX STUFF
  */
 
 .flex {
-    display: flex;
+	display: -ms-flexbox;
+  display: flex;
 }
 
 
 .flex-container {
 	max-width: 850px;
 	margin: 60px auto;
+	display: -ms-flexbox;
 	display: flex;
 	padding: 30px;
 }
@@ -117,12 +120,6 @@ img {
 
 
 
-
-
-
-
-
-
 /**
  * Flex stuff
  */
@@ -132,7 +129,7 @@ img {
 //     flex-direction: column;
 // }
 .isInline {
-    display: -inline-flex;
+    display: inline-flex;
 }
 .is-row {
     flex-direction: row;
