--- a/css/sass/base/_mixins.scss
+++ b/css/sass/base/_mixins.scss
@@ -65,6 +65,14 @@
 
 }
 
+@mixin portfolio-captionitalic(){
+  color: $primary-font-color;
+  font-family: $body-italic; 
+  font-size: 14px;
+  line-height: 20px;
+}
+
+
 
 // intro paragraph style
 @mixin intro-paragraph(){
