update tandem/user-interface.html copy

--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -19,7 +19,7 @@ $margin-top: 35px;
 
 /* project colors - this project colors need assigned to these variables once you comfirm color scheme */
 
-$primary-color: #1271db;
+// $primary-color: #1271db;
 $secondary-color: #233e5b;
 $tertiary-color: #aaa;
 
