fix vh prototype page

--- a/css/sass/pages/_prototype.scss
+++ b/css/sass/pages/_prototype.scss
@@ -298,7 +298,7 @@
 
 
 .interactive-prototype {
-	min-height: 85vh;
+	// min-height: 85vh;
 	.interactive-prototype-text {
 		h2 {
 			font-family: $body-italic;
